# service-fabric

./: .gitignore  collect_traces.py
src/prod/: CMakeLists.txt
src/prod/ktl/src/: CMakeLists.txt
src/prod/ktl/src/inc/: HLPalFunctions.h  KAsyncContext.h  KAsyncQueue.h  KDom.h  KStreams.h  KTextFile.h  KTimer.h  KXmlParser.h  KtlSystem.h  MgmtService.h  kallocator.h  kawipc.h  kblockfile.h  kcachedblockfile.h  kdompath.h  kdomutil.h  khttp.h  kmessageport.h  knetwork.h  knt.h  kperfcounter.h  kpointer.h  kqueue.h  ksspi.h  kstringview.h  kstringview.proto.h  ktask.h  ktl.h  ktlcommon.h  ktlevents.um.h  ktlevents.um.linux.h  ktlperf.h  ktrace.h  kuri.h  kvariant.h  kvolumenamespace.h  kwebsocket.h  kwstring.h
src/prod/ktl/src/linuxinc/: ktlpal.h  paldef.h
src/prod/ktl/src/logger/: CMakeLists.txt
src/prod/ktl/src/src/: KBlockDevice.cpp  KDom.cpp  KTextFile.cpp  KTimer.cpp  KXmlParser.cpp  KtlSystemBase.cpp  kawipcclientpipe.cpp  kawipceventwaiter.cpp  kawipcpipe.cpp  kawipcserverpipeendpoint.cpp  kawipcsharedmemory.cpp  kblockfile.cpp  kcachedblockfile.cpp  kdompath.cpp  kinstrumentop.cpp  knetworkendpoint.cpp  knt.cpp  kperfcounter.cpp  kregistry.cpp  kstringview.cpp  kstringview.proto.cpp  ktlpal.cpp  kuri.cpp  kvariant.cpp  kvolumenamespace.cpp  kwstring.cpp  palio.cpp
src/prod/shared/serialization/inc/: FabricSerializableStream.h  IFabricSerializableStream.h
src/prod/shared/serialization/src/: FabricSerializableStream.cpp
src/prod/src/: CMakeLists.txt
src/prod/src/Common/: AccessToken.cpp  AccessToken.h  AccountHelper.Test.cpp  AccountHelper.cpp  AccountHelper.h  ActivityDescription.cpp  ActivityDescription.h  ActivityId.cpp  ActivityId.h  ActivityType.cpp  ApiEventSource.h  ApiMonitoring.ApiNameDescription.cpp  ApiMonitoring.ApiNameDescription.h  ApiMonitoring.MonitoringComponent.Test.cpp  ApiMonitoring.MonitoringComponentMetadata.h  ApiMonitoring.MonitoringData.h  ApiMonitoring.MonitoringTesting.h  AssertWF.cpp  AssertWF.h  AsyncOperation.cpp  AsyncOperation.h  AsyncWaitHandle.Linux.cpp  AsyncWaitHandle.h  AsyncWorkJobQueue.Test.cpp  AsyncWorkJobQueue.h  AsyncWorkJobQueuePerfCounters.cpp  AsyncWorkJobQueuePerfCounters.h  BatchJobQueue.h  Bique.Test.cpp  ByteBuffer.h  CabOperations.cpp  CabOperations.h  CachedFile.Test.cpp  CachedFile.cpp  CachedFile.h  CertDirMonitor.Linux.cpp  CertDirMonitor.Linux.h  CertDirMonitor.Test.cpp  ComConfigStore.cpp  ComConfigStore.h  (+313 more)
src/prod/src/Common/Zip/: Zip_Linux.cpp  Zip_Linux.h
src/prod/src/Common/lib/: CMakeLists.txt
src/prod/src/Federation/: ArbitrationOperation.cpp  ArbitrationTable.cpp  ArbitrationTable.h  BroadcastForwardContext.cpp  BroadcastForwardContext.h  BroadcastHeader.h  BroadcastManager.cpp  BroadcastManager.h  CMakeLists.txt  Constants.cpp  Constants.h  Federation.h  FederationConfig.cpp  FederationConfig.h  FederationEventSource.h  FederationMessage.cpp  FederationMessage.h  FederationPartnerNodeHeader.h  FederationSubsystem.cpp  FederationSubsystem.h  FederationSubsystem.test.cpp  IRouter.cpp  IRouter.h  JoinManager.cpp  MulticastForwardContext.cpp  NodeActivityTraceComponent.h  NodeConfig.h  NodeDoesNotMatchFaultBody.h  NodeIdRangeTable.Test.cpp  NodeIdRangeTable.cpp  NodeRing.cpp  NodeRing.h  NodeTraceComponent.h  PToPHeader.h  PartnerNode.cpp  PartnerNode.h  PointToPointEventSource.h  PointToPointManager.cpp  RoutingHeader.h  RoutingManager.cpp  (+29 more)
src/prod/src/Federation/exe/: CMakeLists.txt  Main.cpp
src/prod/src/Federation/lib/: CMakeLists.txt
src/prod/src/HorizonNode/: Main.cpp  Node.cpp  Node.h
src/prod/src/HorizonNode/exe/: CMakeLists.txt
src/prod/src/Lease/: CMakeLists.txt  LeaseLayerApi.Test.cpp  LeaseLayerTestCommon.cpp
src/prod/src/Lease/linux/: Api.cpp  LeasLayr.cpp  LeasLayr.h  LeaseAgent.cpp  LeaseLayerEventSource.h  LeaseLayerIo.cpp  LeaseTransport.cpp  LeaseTransport.h  Leases.cpp  generictable.cpp  isvalid.cpp  leaseapp.cpp  leaselayerio.h
src/prod/src/LeaseAgent/: DummyLeaseDriver.cpp  DummyLeaseDriver.h  LeaseAgent.cpp  LeaseAgent.h  LeaseAgentEventSource.h  LeaseAgentInstance.h  LeaseConfig.h  LeasePartner.cpp  LeasePartner.h
src/prod/src/LeaseAgent/lib/: CMakeLists.txt
src/prod/src/PyHost/: BroadcastMessageBody.cpp  BroadcastMessageBody.h  CMakeLists.txt  Host.cpp  Host.h  PyHostConfig.cpp  PyHostConfig.h  PyInterpreter.cpp  PyInterpreter.h  PyModuleCache.cpp  PyModuleCache.h  PyUtils.cpp  PyUtils.h  ScopedGilState.h  ScopedPyObject.cpp  ScopedPyObject.h  SingletonHost.h
src/prod/src/PyHost/dll/: CMakeLists.txt  dll.cpp  dll.h  exports
src/prod/src/ServiceModel/: CMakeLists.txt  Claim.h  Constants.cpp  Constants.h  Parser.cpp  Parser.h  ServiceModel.h  ServiceModelConfig.h
src/prod/src/ServiceModel/AccessControl/: FabricAcl.h  SecurityPrincipal.h
src/prod/src/ServiceModel/federation/: NodeId.cpp  NodeId.h  NodeIdGenerator.cpp  NodeIdGenerator.h  NodeInstance.cpp  NodeInstance.h
src/prod/src/ServiceModel/lib/: CMakeLists.txt
src/prod/src/ServiceModel/pch/: stdafx.h
src/prod/src/ServiceModel/transport/: ClaimsRetrievalMetadata.cpp  ClaimsRetrievalMetadata.h  RoleMask.cpp  (+10 more)
src/prod/src/Transport/: AcceptThrottle.cpp  ActionHeader.cpp  ActionHeader.h  Actor.cpp  Actor.h  CMakeLists.txt  ClaimsMessage.cpp  ClaimsMessage.h  Constants.cpp  Constants.h  CredentialType.cpp  CredentialType.h  DatagramTransportFactory.cpp  DatagramTransportFactory.h  DemuxerT.h  FabricActivityHeader.cpp  FabricActivityHeader.h  ForwardMessageHeader.h  IConnection.h  IDatagramTransport.cpp  IDatagramTransport.h  IListenSocket.cpp  IListenSocket.h  ISendTarget.h  IpcClient.cpp  IpcClient.h  IpcEventSource.h  IpcHeader.cpp  IpcHeader.h  IpcMessaging.test.cpp  IpcReceiverContext.h  IpcServer.cpp  IpcServer.h  ListenInstance.cpp  ListenInstance.h  ListenSocket.Linux.cpp  ListenSocket.h  MemoryTransport.Test.cpp  MemoryTransport.cpp  MemoryTransport.h  (+64 more)
src/prod/src/inc/: resourceids.h
src/prod/src/ktllogger/: Constants.cpp  Constants.h  KtlLoggerConfig.h  KtlLoggerNode.cpp  KtlLoggerNode.h  SharedLogSettings.h  ktlloggerktl.cpp  ktlloggerktl.h
src/prod/src/resources/: Resources.h
(+222 files in other folders)
